Fix bootstrap weird z-index decision to make the dropdown overlay actually work

--- a/src/pivotal-ui/components/header/header.scss
+++ b/src/pivotal-ui/components/header/header.scss
@@ -102,6 +102,11 @@ header {
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
+
+  .drop-down-menu-toggle {
+    z-index: 1 !important; // WTF BOOTSTRAP WHY?!
+  }
+
 }
 header.hero-transparent {
   background: transparent;
